# dto/auth_dto.go
@@ -1,0 +1,19 @@
+package dto
+
+// Request
+
+type RequestLogin struct {
+	Email    string `json:"email"`    // อีเมลของผู้ใช้
+	Password string `json:"password"` // รหัสผ่าน
+}
+
+type JWTClaims struct {
+	UserID       string `json:"user_id"`       // User ID
+	EmployeeCode string `json:"employee_code"` // Employee code
+	Role         string `json:"role"`          // User role
+	TitleTH      string `json:"title_th"`      // Title in Thai
+	FirstNameTH  string `json:"first_name_th"` // First name in Thai
+	LastNameTH   string `json:"last_name_th"`  // Last name in Thai
+	Avatar       string `json:"avatar"`        // User avatar URL
+	Status       string `json:"status"`        // User status (e.g., active, inactive)
+}
